# was-basic-hypertext

./: .gitignore  Cargo.toml  Makefile.toml  README.md
crates/lib/: Cargo.toml
crates/lib/src/: components.rs  layouts.rs  lib.rs  link.rs  tests.rs
crates/lib/src/components/: badge.rs  button.rs  head.rs
crates/lib/src/layouts/: code_example.rs  page.rs
crates/lib/src/tests/: badge.rs  button.rs  code_example.rs  page.rs
crates/macros/: Cargo.toml
crates/macros/src/: attribute.rs  derive.rs  lib.rs
examples/client/: Cargo.toml
examples/client/src/: fontawesome.rs  lib.rs
examples/client/src/components/: badge.rs  button.rs
examples/client/web/: index.html  index.js  main.css  main.js
examples/server/: Cargo.toml
examples/server/src/: main.rs
src/: appearance.rs  attributes.rs  lib.rs  variant.rs
src/components/: badge.rs
src/tests/: badge.rs
web/js/components/: head.js
web/js/layouts/: code-example.js  page.js
web/style/: index.css
web/style/common/: index.css  native.css
web/style/common/component/: form-control.css  size.css  variants.css  visually-hidden.css
web/style/components/: badge.css  button.css  head.css  icon.css
web/style/layouts/: code-example.css  page.css
web/style/utils/: icon.css
