[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
edition = "2024"

[profile.release]
lto = true

[workspace.dependencies]
derive_more = { version = "2.1", features = ["as_ref"] }
hypertext = { git = "https://github.com/vidhanio/hypertext.git", version = "0.12", features = ["axum", "htmx"] }
itertools = "0.14"
strum = { version = "0.27", features = ["derive"] }
was-basic-hypertext-macros = { path = "crates/macros" }
